--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.562.0",
     "next": "14.2.14",
     "next-themes": "^0.4.6",
+    "nextjs-toploader": "^3.9.17",
     "node-appwrite": "14.0.0",
     "nuqs": "1.19.1",
     "react": "^18",
